# vox-box

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
hack/: build.sh  ci.sh  install.sh  lint.sh  publish-pypi.sh  test.sh
hack/lib/: init.sh  log.sh  util.sh  version.sh
hack/lib/windows/: init.ps1  log.ps1  util.ps1  version.ps1
hack/windows/: build.ps1  ci.ps1  generate.ps1  install.ps1  lint.ps1  publish-pypi.ps1  test.ps1
speech_box/: logging.py  main.py
speech_box/backends/stt/: base.py  faster_whisper.py  funasr.py
speech_box/backends/tts/: bark.py  base.py  cosyvoice.py
speech_box/cmd/: estimate.py  start.py  version.py
speech_box/config/: config.py
speech_box/downloader/: downloaders.py  hub.py
speech_box/elstimator/: bark.py  base.py  cosyvoice.py  estimate.py  faster_whisper.py  funasr.py
speech_box/server/: app.py  model.py  openai_routers.py  routers.py  server.py
speech_box/utils/: ffmpeg.py  file.py  model.py
vox_box/: __init__.py  main.py
vox_box/backends/stt/: base.py  faster_whisper.py  funasr.py
vox_box/backends/tts/: bark.py  base.py  cosyvoice.py  cosyvoice_last.py  cosyvoice_spk2info.pt  dia.py
vox_box/cmd/: start.py  version.py
vox_box/config/: config.py
vox_box/downloader/: downloaders.py
vox_box/elstimator/: bark.py  base.py  cosyvoice.py  estimate.py  faster_whisper.py  funasr.py
vox_box/estimator/: bark.py  base.py  cosyvoice.py  dia.py  estimate.py  faster_whisper.py  funasr.py
vox_box/server/: app.py  model.py  routers.py  server.py
vox_box/utils/: audio.py  compat_importlib.py  log.py  model.py
