[tool.poetry]
name = "vox_box"
version = "0.0.0"
description = "Vox box"
authors = ["GPUStack Authors <contact@gpustack.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
absl-py = "2.1.0"
accelerate = "1.1.1"
addict = "2.4.0"
aiofiles = "23.2.1"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.2"
aiosignal = "1.3.1"
aliyun-python-sdk-core = "2.16.0"
aliyun-python-sdk-kms = "2.16.5"
altair = "5.4.1"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.6.2.post1"
attrs = "24.2.0"
audioread = "3.0.1"
beautifulsoup4 = "4.12.3"
grpcio-tools = "1.68.0"
h11 = "0.14.0"
httpcore = "1.0.6"
httptools = "0.6.4"
httpx = "0.27.2"
huggingface-hub = "0.23.5"
humanfriendly = "10.0"
hydra-core = "1.3.2"
HyperPyYAML = "1.2.2"
identify = "2.6.2"
idna = "3.10"
importlib_metadata = "8.5.0"
importlib_resources = "6.4.5"
inflect = "7.3.1"
installer = "0.7.0"
jaconv = "0.4.0"
jamo = "0.4.1"
jieba = "0.42.1"
Jinja2 = "3.1.4"
jmespath = "0.10.0"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
kaldiio = "2.18.0"
keyring = "24.3.1"
kiwisolver = "1.4.7"
lazy_loader = "0.4"
torch = "*"
numpy = "1.26.4"
faster-whisper = "1.0.3"
flake8 = "^7.1.1"
black = "^24.10.0"
transformers = "^4.46.3"
scipy = "^1.14.1"
uvicorn = "^0.32.0"
fastapi = "^0.115.5"
funasr = "1.1.14"
torchaudio = "^2.5.1"
python-multipart = "^0.0.17"
conformer = "^0.3.2"
diffusers = "^0.31.0"
lightning = "^2.4.0"
rich = "^13.9.4"
gdown = "^5.2.0"
matplotlib = "^3.9.2"
wget = "^3.2"
pyarrow = "^18.0.0"
openai-whisper = "^20240930"
tn = "^0.0.4"
cython = "^3.0.11"
librosa = "^0.10.2.post1"
grpcio = "^1.68.0"
optimum = "^1.23.3"
pipx = "^1.7.1"
pynini = { version="2.1.6", markers = "platform_system == 'Linux'" }
wetextprocessing = { version="1.0.4.1", markers = "platform_system == 'Linux'" }
twine = "^5.1.1"
modelscope = "^1.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vox-box = "vox_box.main:main"
